# skript

./: CHANGELOG.md  LICENSE  README.md  skript.cabal
app/: Main.hs
lib/SKrIpt/: CodeGen.hs  Compiler.hs  PrimLib.hs  Runtime.hs
